@@ -63,6 +63,7 @@ exempt of errors.
 - Peng
 - Peter Hartley
 - Peter Pramberger (peterpramb)
+- Philippe (philippe44ca)
 - Philipp Matthias Hahn
 - Pino Toscano (pinotree)
 - Rene Hexel
